# agentic-sdlc

./: .gitignore  AGENT.md  AGENTS.md  AGENT_REGISTRY_QUICKSTART.md  CLAUDE.md  GEMINI.md  README.md  WEBHOOK-SETUP.md  pyproject.toml  reinstall-cap.sh  spec.example.yaml  spec.yaml
docs/: AGENT_REGISTRY.md  AGENT_USAGE_TRACKING.md  EVIDENCE_VIEWER_UPDATE.md  TESTING_GUIDE.md  chorus-aidlc-verification.md
examples/: agent_registry_example.sh
scripts/: approve.sh  notify.sh  reset.sh  run.sh  status.sh
sdlc_orchestrator/: __init__.py  agent_cli_config.py  agent_registry.py  agent_status_checker.py  backend.py  cli.py  executor.py  memory.py  runner.py  state_machine.py  utils.py
sdlc_orchestrator/commands/: __init__.py  agent.py  artifact.py  github.py  init.py  ops.py  project.py  state.py  story.py  ui.py
sdlc_orchestrator/hooks/: on_bash.py  on_stop.py
sdlc_orchestrator/integrations/: github.py  slack.py
sdlc_orchestrator/phases/: __init__.py  base.py  design.py  feedback.py  implementation.py  planning.py  requirement.py  review.py  validation.py
sdlc_orchestrator/skills/: sdlc-analyze-repo.md  sdlc-cleanup-worktree.md  sdlc-design.md  sdlc-feedback.md  sdlc-implement.md  sdlc-orchestrate.md  sdlc-plan.md  sdlc-requirement.md  sdlc-review.md  sdlc-setup.md  sdlc-start.md  sdlc-validate.md
sdlc_orchestrator/templates/: global.md  project.md  spec.yaml
sdlc_orchestrator/ui/: server.py  (+4 more)
tests/: test_agent_registry.py  test_agent_status_checker.py  test_backend_runtime.py  test_testing_phase.py  test_ui_artifacts.py
workflow/: state.json  tasks.json
(+43 files in other folders)
